# model_projet_geant4

./: .gitignore  CMakeLists.txt  README.md
app/: main.cc
app/output/: output.csv  output.txt
include/: EventAction.hh
include/construction/: DetectorConstruction.hh
include/generation/: PrimaryGeneratorAction.hh
macros/: interactive.mac
src/: EventAction.cc
src/construction/: DetectorConstruction.cc
src/generation/: PrimaryGeneratorAction.cc
